RESOLVED FIXED139578
Fix the !ENABLE(SVG_FONTS) build after r177078
https://bugs.webkit.org/show_bug.cgi?id=139578
Summary Fix the !ENABLE(SVG_FONTS) build after r177078
Csaba Osztrogonác
Reported 2014-12-12 00:37:02 PST
Fix the !ENABLE(SVG_FONTS) build after r177078
Attachments
Patch (1.94 KB, patch)
2014-12-12 00:37 PST, Csaba Osztrogonác
no flags
Patch (1.90 KB, patch)
2014-12-12 00:38 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2014-12-12 00:37:33 PST
Csaba Osztrogonác
Comment 2 2014-12-12 00:38:12 PST
Csaba Osztrogonác
Comment 3 2014-12-12 00:39:14 PST
build log: ../../Source/WebCore/platform/graphics/cairo/FontCairo.cpp: In member function 'DashArray WebCore::Font::dashesForIntersectionsWithRect(const WebCore::TextRun&, const WebCore::FloatPoint&, const WebCore::FloatRect&) const': ../../Source/WebCore/platform/graphics/cairo/FontCairo.cpp:320:40: error: 'class WebCore::TextRun::RenderingContext' has no member named 'createGlyphToPathTranslator'
WebKit Commit Bot
Comment 4 2014-12-12 04:33:41 PST
Comment on attachment 243184 [details] Patch Clearing flags on attachment: 243184 Committed r177221: <http://trac.webkit.org/changeset/177221>
WebKit Commit Bot
Comment 5 2014-12-12 04:33:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.