Fix the !ENABLE(SVG_FONTS) build after r177078 https://bugs.webkit.org/show_bug.cgi?id=139578

Reviewed by Martin Robinson.

* platform/graphics/cairo/FontCairo.cpp:
(WebCore::Font::dashesForIntersectionsWithRect):


Canonical link: https://commits.webkit.org/157461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177221 268f45cc-cd09-0410-ab3c-d52691b4dbfc